# collection_of_companies_hh

./: README.md  config.py  main.py  pyproject.toml  sample_database.ini
src/: api_hh.py  database_manager.py  employers.py  external_api.py  utils.py  vacancies.py
